protocols/tests/identities/dual_identity_d1/dual_identity_d1.out
error: `dut.b` is not an output field of the struct `dut`
                        (Only output fields are allowed to appear in conditions in if-statements / while-loops)
   ┌─ identities/dual_identity_d1/dual_identity_d1.prot:43:9
   │
43 │     if (dut.b == b) {
   │         ^^^^^ `dut.b` is not an output field of the struct `dut`
                        (Only output fields are allowed to appear in conditions in if-statements / while-loops)

